refactor: migrate transport.rs to async-lsp

--- a/crates/tinymist/Cargo.toml
+++ b/crates/tinymist/Cargo.toml
@@ -57,9 +57,9 @@ typst-ts-compiler.workspace = true
 toml.workspace = true
 walkdir.workspace = true
 typst-preview = { workspace = true, optional = true }
-lsp-server.workspace = true
-crossbeam-channel.workspace = true
+async-lsp.workspace = true
 lsp-types.workspace = true
+crossbeam-channel.workspace = true
 dhat = { version = "0.3.3", optional = true }
 chrono = { version = "0.4" }
 unicode-script = "0.5"
