--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ typst-preview = { version = "0.11.3" }
 typstyle = "0.11.17"
 typstfmt_lib = { git = "https://github.com/astrale-sharp/typstfmt", tag = "0.2.7" }
 
-lsp-server = "0.7.6"
+async-lsp = { version = "0.2.0", features = ["tokio"] }
 lsp-types = { version = "=0.95.0", features = ["proposed"] }
 crossbeam-channel = "0.5.12"
 
@@ -78,8 +78,9 @@ tokio = { version = "1.36.0", features = [
     "macros",
     "rt-multi-thread",
     "io-std",
+    "fs",
 ] }
-tokio-util = "0.7.10"
+tokio-util = { version = "0.7.10", features = ["compat"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
